--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 python-telegram-bot[job-queue]>=21.0
-python-telegram-bot==20.6
-fastapi==0.103.1
-uvicorn==0.23.2
-requests==2.31.0
-aiohttp==3.9.5
+requests>=2.31.0
+beautifulsoup4>=4.12.3
+fastapi>=0.110.0
+uvicorn>=0.29.0
+pillow>=10.2.0
